Add usersService
