# openapi/openapi.yaml
@@ -1,3 +1,4 @@
+---
 openapi: 3.0.0
 info:
   title: API
@@ -36,47 +37,121 @@ paths:
               schema:
                 $ref: '#/components/schemas/Task'
   /tasks/{id}:
-      patch:
-        summary: Update a task
-        tags:
-          - tasks
-        parameters:
-          - name: id
-            in: path
-            required: true
-            schema:
-              type: integer
-        requestBody:
-          description: The task data to update
+    patch:
+      summary: Update a task
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
           required: true
+          schema:
+            type: integer
+      requestBody:
+        description: The task data to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Task'
+      responses:
+        '200':
+          description: The updated task
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
-        responses:
-          '200':
-            description: The updated task
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Task'
-          '404':
-            description: Task not found
-      delete:
-        summary: Delete a task
-        tags:
-          - tasks
-        parameters:
-          - name: id
-            in: path
-            required: true
+        '404':
+          description: Task not found
+    delete:
+      summary: Delete a task
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Task successfully deleted
+        '404':
+          description: Task not found
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
             schema:
-              type: integer
-        responses:
-          '204':
-            description: Task successfully deleted
-          '404':
-            description: Task not found
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    patch:
+      summary: Update a user
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        description: The user data to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+    delete:
+      summary: Delete a user
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: User successfully deleted
+        '404':
+          description: User not found
 components:
   schemas:
     Task:
@@ -84,8 +159,27 @@ components:
       properties:
         id:
           type: integer
-          format: uint # так как в БД айди это только положительные числа.
+          format: uint  # так как в БД айди это только положительные числа.
         task:
           type: string
         is_done:
-          type: boolean # Исправил с "bool" на "boolean", так как OpenAPI использует тип "boolean"
+          type: boolean  # Исправил с "bool" на "boolean"
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          minimum: 1  # Положительное значение
+        email:
+          type: string
+        password:
+          type: string
+        delete_at:
+          type: string
+          format: date-time  # Формат времени
+        created_at:
+          type: string
+          format: date-time  # Формат времени
+        update_at:
+          type: string
+          format: date-time  # Формат времени
